force-app/main/default/objects/LLC_BI__Product_Collateral_Type__c/LLC_BI__Product_Collateral_Type__c.object-meta.xml
<CustomObject>
    <description>This junction object enables a user to connect a collateral type to a product in the product catalog.</description>
    <label>Product Collateral Type</label>
    <nameField>
        <displayFormat>PCT-{00000000}</displayFormat>
        <label>number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Collateral Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>