force-app/main/default/objects/LLC_BI__Product_Collateral_Type__c/fields/LLC_BI__Automate_Collateral_Pledge__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Automate_Collateral_Pledge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The administrator sets this optional checkbox to true to bypass the pledge process. This automatically sets the pledge to the lesser of the loan value or the available lendable value. By default, it is false.</description>
    <inlineHelpText>Check this box if you wish to automate the pledge process for this product and collateral type combination.</inlineHelpText>
    <label>Automate Collateral Pledge</label>
    <type>Checkbox</type>
</CustomField>