force-app/main/default/objects/LLC_BI__Product_Collateral_Type__c/fields/LLC_BI__Collateral_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Collateral_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Use this lookup field to select a collateral type to connect to a product.</description>
    <inlineHelpText>Use this lookup field to select a collateral type to connect to a product.</inlineHelpText>
    <label>Collateral Type</label>
    <referenceTo>LLC_BI__Collateral_Type__c</referenceTo>
    <relationshipLabel>Collateral Types</relationshipLabel>
    <relationshipName>Collateral_Types</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>