force-app/main/default/objects/LLC_BI__Product_Collateral_Type__c/fields/LLC_BI__Filter_In_Branch_Collateral__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Filter_In_Branch_Collateral__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The user selects this optional checkbox field to filter the product&apos;s associated internal collateral type and sub-type picklists. The system displays the associated collateral types through product collateral type records. By default, this field is deselected.</description>
    <inlineHelpText>Select this checkbox to enable collateral type limiting for the collateral type associated with this record</inlineHelpText>
    <label>Filter In-Branch Collateral</label>
    <type>Checkbox</type>
</CustomField>