force-app/main/default/objects/LLC_BI__Product_Collateral_Type__c/fields/LLC_BI__Filter_In_Branch_Leased_Asset__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Filter_In_Branch_Leased_Asset__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The user selects this optional checkbox field to filter the product&apos;s associated internal asset type and sub-type picklists. The system displays the associated asset types through product asset type records. By default, this field is deselected.</description>
    <inlineHelpText>Select this checkbox to enable asset type limiting for the asset collateral type associated with this record.</inlineHelpText>
    <label>Filter In-Branch Leased Asset</label>
    <type>Checkbox</type>
</CustomField>