force-app/main/default/objects/LLC_BI__Product_Collateral_Type__c/fields/LLC_BI__Is_Default__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select this checkbox if the collateral type you have connected to the product is the default collateral type.</description>
    <inlineHelpText>Select this checkbox if the collateral type you have connected to the product is the default collateral type.</inlineHelpText>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>